--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "sparx",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Sparx Free Members website",
+  "main": "web.js",
   "scripts": {
     "start": "node web.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "discord.js": "^14.14.1",
+    "express": "^4.18.2",
+    "axios": "^1.5.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "sqlite3": "^5.1.6"
   }
 }
