--- a/package.json
+++ b/package.json
@@ -1,15 +1,6 @@
-{
-  "name": "sparx",
-  "version": "1.0.0",
-  "description": "Sparx Free Members website",
-  "main": "web.js",
-  "scripts": {
-    "start": "node web.js"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "axios": "^1.5.0",
-    "dotenv": "^16.3.1",
-    "sqlite3": "^5.1.6"
-  }
+"dependencies": {
+  "express": "^4.18.2",
+  "axios": "^1.5.0",
+  "pg": "^8.12.0",
+  "dotenv": "^16.3.0"
 }
