--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
-"dependencies": {
-  "express": "^4.18.2",
-  "axios": "^1.5.0",
-  "pg": "^8.12.0",
-  "dotenv": "^16.3.0"
+{
+  "name": "sparx",
+  "version": "1.0.0",
+  "description": "Sparx Free Members Website",
+  "main": "web.js",
+  "scripts": {
+    "start": "node web.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "axios": "^1.5.0",
+    "pg": "^8.12.0",
+    "dotenv": "^16.3.0"
+  }
 }
